# src/routes/evaluation.routes.js
@@ -1,5 +1,5 @@
 import { Router } from "express";
-import { registerEvaluation, updateEvaluation, evaluationsByUserID } from "../controller/evaluation.controller.js";
+import { registerEvaluation, updateEvaluation, evaluationsByUserID, deleteEvaluation } from "../controller/evaluation.controller.js";
 
 const router = Router();
 
@@ -7,6 +7,6 @@ router.post("/register", registerEvaluation);
 //router.get('/all_course', getAllCourses);
 router.get("/search_evaluation", evaluationsByUserID);
 router.put("/update_evaluation/:id", updateEvaluation);
-//router.delete("/delete_course/:id", deleteCourse);
+router.delete("/delete_evaluation/:id", deleteEvaluation);
 
 export default router;
